Bug 379678. Fix up HTML combo box accessibility. r=surkov